add first calculation

--- a/index.html
+++ b/index.html
@@ -50,38 +50,38 @@
           <div class="form">
             <h3 class="font-semibold text-2xl my-5">Expenses</h3>
             <div class="w-3/5 mx-auto pr-5 md:pr-2 text-right">
-              <label class="font-medium text-lg mr-3" for="expenses-food-input"
+              <label class="font-medium text-lg mr-3" for="food-input"
                 >Food:
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
                 type="text"
                 name=""
-                id="expenses-food-input"
+                id="food-input"
               />
             </div>
             <div class="w-3/5 mx-auto pr-5 md:pr-2 text-right">
-              <label class="font-medium text-lg mr-3" for="expenses-rent-input"
+              <label class="font-medium text-lg mr-3" for="rent-input"
                 >Rent:
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
                 type="text"
                 name=""
-                id="expenses-rent-input"
+                id="rent-input"
               />
             </div>
             <div class="w-3/5 mx-auto pr-5 md:pr-2 text-right">
               <label
                 class="font-medium text-lg mr-3"
-                for="expenses-clothes-input"
+                for="clothes-input"
                 >Clothes:
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
                 type="text"
                 name=""
-                id="expenses-clothes-input"
+                id="clothes-input"
               />
             </div>
             <!-- button are here expenses calculate -->
@@ -92,10 +92,10 @@
               Calculate
             </button>
             <h3 class="font-semibold text-2xl my-5">
-              Total Expenses: <span>5500</span>
+              Total Expenses: $<span id="total-expenses">00</span>
             </h3>
             <h3 class="font-semibold text-2xl my-5">
-              Balance: <span>4500</span>
+              Balance: $<span id="after-balance">00</span>
             </h3>
           </div>
 
@@ -124,10 +124,10 @@
               </button>
             </div>
             <h3 class="font-semibold text-2xl my-5">
-              Saving Amount: <span>2000</span>
+              Saving Amount: $<span id="saving-amount">00</span>
             </h3>
             <h3 class="font-semibold text-2xl my-5">
-              Remaining Balance: <span>2500</span>
+              Remaining Balance: $<span id="remaining-balance">00</span>
             </h3>
           </div>
         </div>
