add secont button eventListener

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
           <!-- save calculation are here -->
           <div>
             <div
-              class="saving-parcent flex items-center justify-center mt-4 mr-8 md:mr-5"
+              class="saving-parcent flex items-center justify-center mt-4 mr-8 md:mr-6"
             >
               <div class="percent text-right">
                 <label class="font-medium text-lg mr-3" for="parcent"
                   >Save:
                 </label>
                 <input
-                  class="py-2 w-2/4 bg-gray-300"
+                  class="py-2 w-1/4 bg-gray-300 text-center"
                   type="text"
                   name=""
                   id="parcent"
