edit some code for clean

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
-                type="text"
-                name=""
+                type="number"
+                placeholder="00"
                 id="income-input"
               />
             </div>
@@ -55,8 +55,8 @@
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
-                type="text"
-                name=""
+                type="number"
+                placeholder="00"
                 id="food-input"
               />
             </div>
@@ -66,8 +66,8 @@
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
-                type="text"
-                name=""
+                type="number"
+                placeholder="00"
                 id="rent-input"
               />
             </div>
@@ -79,8 +79,8 @@
               </label>
               <input
                 class="py-2 pl-3 my-2 bg-gray-300 md:w-3/4 w-2/4"
-                type="text"
-                name=""
+                type="number"
+                placeholder="00"
                 id="clothes-input"
               />
             </div>
@@ -110,8 +110,8 @@
                 </label>
                 <input
                   class="py-2 w-1/4 bg-gray-300 text-center"
-                  type="text"
-                  name=""
+                  type="number"
+                  placeholder="00"
                   id="parcent"
                 />
               </div>
