--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salary Expenses</title>
     <!-- own css are here -->
-    <link rel="stylesheet" href="./css/style.css" />
-
+    <link rel="stylesheet" href="./css/style.css">
     <!-- tailwind css are here -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -72,9 +71,7 @@
               />
             </div>
             <div class="w-3/5 mx-auto pr-5 md:pr-2 text-right">
-              <label
-                class="font-medium text-lg mr-3"
-                for="clothes-input"
+              <label class="font-medium text-lg mr-3" for="clothes-input"
                 >Clothes:
               </label>
               <input
@@ -91,6 +88,10 @@
             >
               Calculate
             </button>
+            <!-- error handeling message -->
+            <div>
+                <h3 id="error-message" class="error-handling bg-red-500 text-white px-10 py-1 mt-2 mx-5 rounded"></h3>
+            </div>
             <h3 class="font-semibold text-2xl my-5">
               Total Expenses: $<span id="total-expenses">00</span>
             </h3>
