--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </button>
             <!-- error handeling message -->
             <div>
-                <h3 id="error-message" class="error-handling bg-red-500 text-white px-10 py-1 mt-2 mx-5 rounded"></h3>
+                <h3 id="error-message" class="error-handling text-red-500 px-10 py-1 mt-2 mx-5 rounded"></h3>
             </div>
             <h3 class="font-semibold text-2xl my-5">
               Total Expenses: $<span id="total-expenses">00</span>
